--- a/src/content/studio/metrics/usage-reporting.mdx
+++ b/src/content/studio/metrics/usage-reporting.mdx
@@ -9,7 +9,7 @@ Apollo Studio can ingest operation metrics from your GraphQL server to provide p
 
 <img
   src="../img/studio-metrics.jpg"
-  class="screenshot"
+  className="screenshot"
   alt="Apollo Studio metrics view"
 />
 
@@ -34,7 +34,7 @@ After you obtain a graph API key, assign it to the `APOLLO_KEY` environment vari
 
 Now the next time you start your production server, it automatically begins pushing trace data to Studio.
 
-You can also push trace data from environments besides production, such as a staging or beta server. To keep this data separate from your production data, learn how to [create variants of your graph](/org/graphs/#managing-variants).
+You can also push trace data from environments besides production, such as a staging or beta server. To keep this data separate from your production data, learn how to [create variants of your graph](../org/graphs/#managing-variants).
 
 For advanced configuration options, see [Metrics and logging](https://www.apollographql.com/docs/apollo-server/features/metrics/).
 
