--- a/src/content/studio/org/members.mdx
+++ b/src/content/studio/org/members.mdx
@@ -52,11 +52,11 @@ When `Contributors` in an organization create a new graph, they are automaticall
 | Create new variants                                    |     ✓     |      ✓      | Non-[protected](./graphs/#protected-variants-enterprise-only) variants only |          |          |
 | Push schemas to a graph                                |     ✓     |      ✓      | Non-[protected](./graphs/#protected-variants-enterprise-only) variants only |          |          |
 | Manage Explorer settings (URL, etc)                    |     ✓     |      ✓      | Non-[protected](./graphs/#protected-variants-enterprise-only) variants only |          |          |
-| Create [Deployed Graphs](/org/graphs/)                 |     ✓     |      ✓      |                                      ✓                                      |          |          |
+| Create [Deployed Graphs](./graphs/)                    |     ✓     |      ✓      |                                      ✓                                      |          |          |
 | Run [schema checks](../schema-checks)                  |     ✓     |      ✓      |                                      ✓                                      |    ✓     |          |
 | See the schemas of subgraphs in federated graphs       |     ✓     |      ✓      |                                      ✓                                      |    ✓     |          |
 | View graph usage metrics and traces                    |     ✓     |      ✓      |                                      ✓                                      |    ✓     |          |
-| Create [Development Graphs](/dev-graphs/)              |     ✓     |      ✓      |                                      ✓                                      |    ✓     |    ✓     |
+| Create [Development Graphs](../dev-graphs/)            |     ✓     |      ✓      |                                      ✓                                      |    ✓     |    ✓     |
 | View graph schemas and changelogs                      |     ✓     |      ✓      |                                      ✓                                      |    ✓     |    ✓     |
 | Query graphs with the Explorer                         |     ✓     |      ✓      |                                      ✓                                      |    ✓     |    ✓     |
 
@@ -80,7 +80,7 @@ Notably, `Billing Manager`s can't invite new members to the organization or upda
 
 ### Dev graphs
 
-[Development Graphs](/dev-graphs/) are a special case in our permissions system. Any user in an organization (even a `Consumer`) can create a dev graph and act as its `Graph Admin`. Each dev graph is private to the user who creates it. Even `Org Admin`s can't view them, and they can't currently be shared with other users.
+[Development Graphs](../dev-graphs/) are a special case in our permissions system. Any user in an organization (even a `Consumer`) can create a dev graph and act as its `Graph Admin`. Each dev graph is private to the user who creates it. Even `Org Admin`s can't view them, and they can't currently be shared with other users.
 
 ## Graph API key roles
 
