--- a/src/content/studio/api-keys.mdx
+++ b/src/content/studio/api-keys.mdx
@@ -19,7 +19,7 @@ Create a unique graph API key for each non-development system that communicates 
 
 Unless you have an Enterprise plan, every graph API key provides **full access** to its associated graph.
 
-If you have an Enterprise plan, you can [assign a role](/org/members/#graph-api-key-roles) to each graph API key you create. If you do, the API key's permissions are limited to that role's permissions.
+If you have an Enterprise plan, you can [assign a role](./org/members/#graph-api-key-roles) to each graph API key you create. If you do, the API key's permissions are limited to that role's permissions.
 
 You can't change a graph API key's role after it's created. Instead, create a new key with the desired role.
 
@@ -27,6 +27,6 @@ You can't change a graph API key's role after it's created. Instead, create a ne
 
 A personal API key provides partial access to **every graph in every organization you belong to**. A personal API key has the same permissions that your user account has in each of your organizations.
 
-Personal API keys are useful for local development tools (like the Apollo [CLI](https://www.apollographql.com/docs/devtools/cli/) and [VS Code extension](https://www.apollographql.com/docs/devtools/editor-plugins/)) to load schemas and other data from Studio.
+Personal API keys are useful for local development tools (like the Apollo [CLI](/devtools/cli/) and [VS Code extension](/devtools/editor-plugins/)) to load schemas and other data from Studio.
 
 <ObtainPersonalApiKey />
