--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -8,7 +8,7 @@ import RegisterFederatedCli from '../shared/register-federated-cli.mdx';
 
 Hello! This article gets you up and running with Apollo Studio. None of this setup requires a paid plan.
 
-You can use Studio with any GraphQL server. Certain features (such as [metrics reporting](/metrics/usage-reporting/)) are currently best supported by [Apollo Server](https://www.apollographql.com/docs/apollo-server/).
+You can use Studio with any GraphQL server. Certain features (such as [metrics reporting](./metrics/usage-reporting/)) are currently best supported by [Apollo Server](https://www.apollographql.com/docs/apollo-server/).
 
 ## 1. Create your account
 
@@ -114,7 +114,7 @@ Studio can connect to your Slack workspace to send a notification whenever your 
 
 Your GraphQL server can push operation metrics to Apollo Studio, enabling you to visualize and improve performance.
 
-To set up metrics reporting, read [Sending metrics to Apollo Studio](/metrics/usage-reporting/).
+To set up metrics reporting, read [Sending metrics to Apollo Studio](./metrics/usage-reporting/).
 
 ## 7. Set up continuous delivery
 
@@ -132,8 +132,8 @@ The best way to fully familiarize yourself with Studio is to use it! Visit [stud
 
 The docs also have plenty of information on the features available with Team and Enterprise plans, such as:
 
-- [Schema checks](schema-checks)
-- [Segmenting metrics by client types and versions](/metrics/client-awareness/)
-- [Integration with Datadog](/metrics/datadog-integration/)
+- [Schema checks](./schema-checks)
+- [Segmenting metrics by client types and versions](./metrics/client-awareness/)
+- [Integration with Datadog](./metrics/datadog-integration/)
 
 If you'd like to have a conversation about Apollo Studio and how it can help your organization, [please contact us](https://www.apollographql.com/contact-sales).
