--- a/src/content/studio/index.mdx
+++ b/src/content/studio/index.mdx
@@ -18,19 +18,19 @@ import CalloutCard from '../shared/callout-card.mdx';
   and enables you to [create variants of your schema](./org/graphs/#managing-variants) for different environments
   (such as staging and production)
 - A powerful [Explorer](./explorer/explorer/) that helps your team build and run queries against your registered schema
-- [Metrics reporting](/metrics/usage-reporting/) for up to the last 24 hours
+- [Metrics reporting](./metrics/usage-reporting/) for up to the last 24 hours
 - Team collaboration via [organizations](./org/organizations/)
 - [Notifications](./notification-setup/) for schema changes and daily metrics reports
 - [Management of a federated graph](https://www.apollographql.com/docs/federation/managed-federation/overview/)
 
 ### Available with an Apollo Team or Enterprise plan
 
-- [Metrics reporting](/metrics/usage-reporting/) for arbitrary timeframes
-- [Metrics segmentation by distinct clients and versions](/metrics/client-awareness/)
+- [Metrics reporting](./metrics/usage-reporting/) for arbitrary timeframes
+- [Metrics segmentation by distinct clients and versions](./metrics/client-awareness/)
 - [Schema checks](./schema-checks/)
 - [Operation safelisting](./operation-registry/)
-- [Resolver-level query tracing](/metrics/field-usage/)
-- [Integration with Datadog](/metrics/datadog-integration/)
+- [Resolver-level query tracing](./metrics/field-usage/)
+- [Integration with Datadog](./metrics/datadog-integration/)
 - Longer data retention
 
 [Learn more about pricing and billing](https://www.apollographql.com/plans/)
