Remove basics docset on homepage

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -3,8 +3,7 @@ title: Apollo Docs Home
 description: Explore the Apollo platform
 ---
 
-import dish from '../../assets/dish.png';
-import {ButtonGroup, Img, VStack} from '@chakra-ui/react';
+import {ButtonGroup, VStack} from '@chakra-ui/react';
 import {
   CTA_LEARN,
   CommunityButton,
@@ -17,17 +16,6 @@ import {SiDiscourse, SiGithub, SiTwitter, SiYoutube} from 'react-icons/si';
 Apollo is a platform for building a unified graph, a communication layer that helps you manage the flow of data between your application clients (such as web and native apps) and your back-end services. At the heart of the graph is a query language called GraphQL.
 
 <Odyssey />
-
-## Getting started
-
-<Docset
-  title="Apollo Basics"
-  description="Whether you're looking for an overview of the Apollo Graph Platform or trying to determine if GraphQL is the right fit for you, we've got you covered!"
-  path="/getting-started"
-  cta="Get started with %s"
->
-  <Img flexShrink="0" src={dish} w="92px" ml="8" />
-</Docset>
 
 ## Client
 
